# msq

./: .editorconfig  .eslintrc.js  .gitignore  .gitmodules  .npmrc  Cargo.toml  README.md  example.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  propagate-env.js  set-version.js  tailwind.config.js  tsconfig.json  turbo.json  vite.config.mjs
apps/demo/: Cargo.toml  canister_ids.json  dfx.json  index.html  package.json  propagate-env.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1707852507595-34e267bb8881f.mjs
apps/demo/assets/: .ic-assets.json5
apps/demo/src/: index.tsx
apps/demo/src/backend/: Cargo.toml  can.did
apps/demo/src/backend/src/: actor.rs  lib.rs
apps/demo/src/frontend/: backend.ts  index.tsx  node.d.ts  utils.ts
apps/demo/src/frontend/store/: user.ts
apps/demo/src/pages/index/: index.tsx
apps/demo/src/store/: user.ts
apps/landing/: canister_ids.json  dfx.json  index.css  index.html  package.json
apps/landing/.well-known/: ic-domains
apps/landing/styles/: dao-section.scss  faq-screen.scss  feature-screen-1.scss  feature-screen-2.scss  friendly-community-screen.scss  hero-screen.scss  index.scss  integration-screen.scss  lets-make-crypto-global.scss  no-install-screen.scss  output.css  reset.scss  tailwind.css  vars.scss
apps/nns/: dfx.json
apps/site/: Cargo.toml  canister_ids.json  dfx.json  index.html  package.json  pnpm-lock.yaml  propagate-env.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/site/public/: .ic-assets.json5  reset.css  site.webmanifest
apps/site/public/.well-known/: ic-domains
apps/site/src/backend/: Cargo.toml  can.did
apps/site/src/backend/invoice_manager/: Cargo.toml  can.did
apps/site/src/backend/invoice_manager/src/: actor.rs  invoice.rs
apps/site/src/backend/payment_hub/: Cargo.toml  can.did
apps/site/src/backend/payment_hub/src/: actor.rs  exchange_rates.rs  invoices.rs  shops.rs  timers.rs  tokens.rs  utils.rs
apps/site/src/backend/payment_hub_history/: Cargo.toml  can.did
apps/site/src/backend/payment_hub_history/src/: actor.rs  utils.rs
apps/site/src/backend/src/: actor.rs
apps/site/src/backend/statistics/: Cargo.toml  can.did
apps/site/src/backend/statistics/src/: actor.rs
apps/site/src/frontend/: backend.ts  index.tsx  node.d.ts  routes.ts  routes.tsx  styles.ts
apps/site/src/site_backend/: Cargo.toml  can.did
documentation/: architecture.md  integration.md
previous Scss styles/: dao-section.scss  faq-screen.scss  feature-screen-1.scss  feature-screen-2.scss  friendly-community-screen.scss  hero-screen.scss  index.scss  integration-screen.scss  output.css  vars.scss
(+103 files in other folders)
