[package]
name = "demo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-ledger-types = { path = "../../../../../cdk-rs-main/library/ic-ledger-types" }
candid = "0.9.6"
serde = "1"
ic-cdk = "0.11.0"
ic-cdk-timers = "0.5.0"                                                           # Feel free to remove this dependency if you don't need timers
