[package]
name = "msq_invoice_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
crate-type = ["cdylib"]
path = "src/actor.rs"

[dependencies]
candid = "0.10.2"
ic-cdk = "0.12.1"
ic-cdk-timers = "0.6.0"        # Feel free to remove this dependency if you don't need timers
serde = "1.0"
ic-stable-structures = "0.6.2"
