[package]
name = "msq_payment_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/actor.rs"

[dependencies]
blake3 = "^1.5"
candid = "^0.10"
ic-cdk = "^0.13"
ic-cdk-timers = "^0.7"
serde = "^1.0"
chrono = { version = "^0.4", default-features = false }
tinystr = "^0.4"
