[package]
name = "msq_payment_hub_history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/actor.rs"

[dependencies]
candid = "^0.10"
borsh = "^1.3"
borsh-derive = "^1.3"
ic-cdk = "^0.13"
serde = "^1.0"
num-bigint = "0.4"
